updating for older java